Added new hybrid JPA/Hibernate (base-app); H2-based JUnit tests Rewrote as "pure JPA" (jpa-syntax); auto-generation, "AssertAnnotations" and Mockito JUnit tests